--- a/CommentApp.DAL/CommentApp.DAL.csproj
+++ b/CommentApp.DAL/CommentApp.DAL.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CommentApp.Models\CommentApp.Models.csproj" />
+  </ItemGroup>
+
 </Project>
