--- a/CommentApp/CommentApp.API.csproj
+++ b/CommentApp/CommentApp.API.csproj
@@ -1,9 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>CommentApp.API</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CommentApp.DAL\CommentApp.DAL.csproj" />
+  </ItemGroup>
 
 
 </Project>
