--- a/CommentApp/CommentApp.API.csproj
+++ b/CommentApp/CommentApp.API.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CommentApp.BLL\CommentApp.BLL.csproj" />
     <ProjectReference Include="..\CommentApp.DAL\CommentApp.DAL.csproj" />
   </ItemGroup>
